deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-music-deployment
  labels:
    app: spring-music
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-music
  template:
    metadata:
      labels:
        app: spring-music
    spec:
      containers:
      - name: spring-music
        image: yanivomc/spring-music:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
    app: spring-music
  ports:
    - port: 8090
      targetPort: 8080

#kubectl port-forward deployments/spring-music-deployment 8080
